2009-08-27  Ulrich Mueller  <ulm@gentoo.org>

	* Makefile (DISTFILES): Include Texinfo source in tarball.

	* gentoo-syntax.el (ebuild-mode-eclasses): New variable.
	(ebuild-mode-insert-skeleton): Ask for inherited eclasses.

2009-08-27  Christian Faulhammer  <fauli@gentoo.org>

	* gentoo-syntax.texi (Functions): Describe ekeyword syntax usage
	(Functions): Document Portage interaction
	(eclass-mode): Describe eclass-mode
	(eselect-mode): Describe eselect-mode

2009-08-26  Christian Faulhammer  <fauli@gentoo.org>

	* gentoo-syntax.texi (Functions): Describe how to start an ebuild
	from scratch
	(Functions): Describe keywording possibilities

	* ebuild-mode-keywords.el (ebuild-mode-keywords-elisp): Add ebuild
	phases to highlighted keywords from elisp.eclass

2009-08-25  Christian Faulhammer  <fauli@gentoo.org>

	* gentoo-syntax.texi: Add new Info manual
	* Makefile: Generate Info file and add it on tarball generation

2009-08-23  Ulrich Mueller  <ulm@gentoo.org>

	* eselect-mode-keywords.el (eselect-mode-keywords-multilib):
	Change font to font-lock-type-face.

2009-08-21  Ulrich Mueller  <ulm@gentoo.org>

	* ebuild-mode-keywords.el:
	* eselect-mode-keywords.el: Add no-byte-compile to file variables.
	These files are loaded by gentoo-syntax.el at compile time,
	therefore the .elc files are not needed at run time.

	* gentoo-syntax.el (ebuild-mode-portdir): New variable.
	(ebuild-mode-licenses, ebuild-mode-use-flags): New variables,
	initialised from license and profile directories of Portage tree.
	(ebuild-mode-restrict-list): New variable.
	(ebuild-mode-arch-list): Initialise from profile directory.
	(ebuild-mode-arch-stable-list): Variable removed.
	(ebuild-mode-insert-skeleton): Interactively ask for values.
	Move function behind mode definitions and completion code.
	(ebuild-mode-menu): Add ebuild-mode-insert-skeleton to menu.
	(ebuild-mode-all-keywords-unstable): New function for this very
	common operation, bind to C-c C-b key (mnemonics: "bump").
